<resources>
    <string name="app_name">Rolltex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="kontakt">Kontakt</string>
    <string name="lokalizacja">Lokalizacja</string>
    <string name="dark_mode">Dark mode</string>
</resources>