<?xml version="1.0" encoding="utf-8"?>
  <menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>
        <item
            android:id="@+id/nav_kalkulator"
            android:title="@string/kalkulator"
            android:icon="@drawable/kalkulator"/>
        <item
            android:id="@+id/nav_kontakt"
            android:title="@string/kontakt"
            android:icon="@drawable/kontakt"/>
        <item
            android:id="@+id/nav_lokalizacja"
            android:title="@string/lokalizacja"
            android:icon="@drawable/lokalizacja"/>
        <item
            android:id="@+id/nav_dark_mode"
            android:title="@string/dark_mode"
            android:icon="@drawable/roleta"/>
    </group>


</menu>